manifests/ingress-13.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-9a84"
    labels:
        app: "diaggarw-9a84"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw4050-diaggarw-9a84.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-9a84"
                servicePort: 8080
